[gd_scene load_steps=7 format=3 uid="uid://c5a0yllv2jlfd"]

[ext_resource type="Script" path="res://main.gd" id="1_6kvxq"]
[ext_resource type="PackedScene" uid="uid://dbsv47i7p5va6" path="res://Scenes/player.tscn" id="1_ffgq3"]
[ext_resource type="PackedScene" uid="uid://irmr0ufltxwc" path="res://Scenes/bow1_pickup.tscn" id="2_k42n8"]
[ext_resource type="PackedScene" uid="uid://cy37jtf252aor" path="res://Scenes/sword1_pickp.tscn" id="5_csdlv"]
[ext_resource type="PackedScene" uid="uid://bm1ypsg65n3nw" path="res://Scenes/procedeal (2).tscn" id="6_om0js"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8sg27"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_6kvxq")

[node name="player" parent="." instance=ExtResource("1_ffgq3")]

[node name="Camera2D" type="Camera2D" parent="player"]
zoom = Vector2(3, 3)

[node name="bow1 spawner" parent="." instance=ExtResource("2_k42n8")]
position = Vector2(-139, 26)

[node name="Area2D" parent="." instance=ExtResource("5_csdlv")]
position = Vector2(-141, -13)

[node name="procedeal" parent="." instance=ExtResource("6_om0js")]

[node name="PauseMenu" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
offset_right = 1165.0
offset_bottom = 658.0
color = Color(0, 0, 0, 0.564706)

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
offset_left = 476.0
offset_top = 284.0
offset_right = 675.0
offset_bottom = 403.0

[node name="Resume" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_8sg27")
text = "Resume"
text_overrun_behavior = 1

[node name="Settings" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="PauseMenu/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
